--- a/social-media-post/manifest.json
+++ b/social-media-post/manifest.json
@@ -7,8 +7,7 @@
   "enableProposedApi": false,
   "documentAccess": "dynamic-page",
   "editorType": [
-    "figma",
-    "dev"
+    "figma"
   ],
   "ui": "ui.html",
   "networkAccess": {
